--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "clipboard": "^2.0.6",
+    "html2canvas": "^1.0.0-rc.5",
     "mint-ui": "^2.2.13",
     "opn": "^6.0.0",
+    "qrcodejs2": "0.0.2",
     "qs": "^6.9.3",
     "vue": "^2.5.2",
     "vue-awesome-mui": "^1.7.3",
