--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "html2canvas": "^1.0.0-rc.5",
     "mint-ui": "^2.2.13",
     "opn": "^6.0.0",
-    "qrcodejs2": "0.0.2",
     "qs": "^6.9.3",
     "vue": "^2.5.2",
     "vue-awesome-mui": "^1.7.3",
     "vue-clipboard": "0.0.1",
     "vue-clipboard2": "^0.3.1",
+    "vue-qr": "^2.2.1",
     "vue-router": "^3.0.1",
     "vue-wechat-title": "^2.0.5",
     "vuex": "^3.1.2"
