--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-qr": "^2.2.1",
     "vue-router": "^3.0.1",
     "vue-wechat-title": "^2.0.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
